// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS withDivider should render correctly 1`] = `
<BpkCard
  accessibilityLabel="Example Card"
  focused={false}
  innerStyle={
    Array [
      Object {
        "flexDirection": "row",
      },
    ]
  }
  onPress={[MockFunction]}
  padded={false}
  style={null}
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </BpkText>
  </View>
  <_class
    dashColor="rgb(230, 228, 235)"
    dashGap={4}
    dashLength={4}
    dashThickness={1}
    style={
      Array [
        Object {
          "flexDirection": "column",
          "marginBottom": 8,
          "marginTop": 8,
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </BpkText>
  </View>
</BpkCard>
`;

exports[`iOS withDivider should render correctly with arbitrary props 1`] = `
<BpkCard
  accessibilityLabel="Example Card"
  focused={false}
  innerStyle={
    Array [
      Object {
        "flexDirection": "row",
      },
    ]
  }
  onPress={[MockFunction]}
  padded={false}
  style={null}
  testID="arbitrary value"
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </BpkText>
  </View>
  <_class
    dashColor="rgb(230, 228, 235)"
    dashGap={4}
    dashLength={4}
    dashThickness={1}
    style={
      Array [
        Object {
          "flexDirection": "column",
          "marginBottom": 8,
          "marginTop": 8,
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </BpkText>
  </View>
</BpkCard>
`;

exports[`iOS withDivider should render correctly with custom main style 1`] = `
<BpkCard
  accessibilityLabel="Example Card"
  focused={false}
  innerStyle={
    Array [
      Object {
        "flexDirection": "row",
      },
    ]
  }
  onPress={[MockFunction]}
  padded={false}
  style={null}
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "padding": 16,
        },
        Object {
          "flex": 2,
        },
      ]
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </BpkText>
  </View>
  <_class
    dashColor="rgb(230, 228, 235)"
    dashGap={4}
    dashLength={4}
    dashThickness={1}
    style={
      Array [
        Object {
          "flexDirection": "column",
          "marginBottom": 8,
          "marginTop": 8,
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </BpkText>
  </View>
</BpkCard>
`;

exports[`iOS withDivider should render correctly with custom stub style 1`] = `
<BpkCard
  accessibilityLabel="Example Card"
  focused={false}
  innerStyle={
    Array [
      Object {
        "flexDirection": "row",
      },
    ]
  }
  onPress={[MockFunction]}
  padded={false}
  style={null}
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "padding": 16,
        },
      ]
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </BpkText>
  </View>
  <_class
    dashColor="rgb(230, 228, 235)"
    dashGap={4}
    dashLength={4}
    dashThickness={1}
    style={
      Array [
        Object {
          "flexDirection": "column",
          "marginBottom": 8,
          "marginTop": 8,
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "padding": 16,
        },
        Object {
          "flex": 3,
        },
      ]
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </BpkText>
  </View>
</BpkCard>
`;

exports[`iOS withDivider should render correctly without padding 1`] = `
<BpkCard
  accessibilityLabel="Example Card"
  focused={false}
  innerStyle={
    Array [
      Object {
        "flexDirection": "row",
      },
    ]
  }
  onPress={[MockFunction]}
  padded={false}
  style={null}
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </BpkText>
  </View>
  <_class
    dashColor="rgb(230, 228, 235)"
    dashGap={4}
    dashLength={4}
    dashThickness={1}
    style={
      Array [
        Object {
          "flexDirection": "column",
          "marginBottom": 8,
          "marginTop": 8,
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <BpkText
      emphasize={false}
      style={Object {}}
      textStyle="base"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </BpkText>
  </View>
</BpkCard>
`;
